# OpenDarkBASIC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  engine-init-notes.txt  notes.txt
dbp-runtime/: CMakeLists.txt
dbp-runtime.old/: CMakeLists.txt
dbp-runtime.old/runtime/: CMakeLists.txt
dbp-runtime/src/: runtime.c
dbp-sdk/plugins/stdout/: CMakeLists.txt
dbp-sdk/runtime/: CMakeLists.txt
dbp-sdk/runtime/src/: dbprt.c
dbp-sdk/runtime/templates/: config.h.in
dbp-test/: CMakeLists.txt
dbp-test/src/: main.c  runtime.c
odb-cli/: CMakeLists.txt
odb-cli/argdefgen/: CMakeLists.txt  README.md
odb-cli/argdefgen/src/: action.c  driver.c  gen_c.c  gen_cpp.c  main.c  node.c  parser.y  scanner.lex  section.c  str.c
odb-cli/argdefgen/templates/: CMakeLists.txt  cpp_postamble.cpp  cpp_preamble.cpp
odb-cli/include/odb-cli/: AST.hpp  Actions.hpp  Banner.hpp  BuildInfo.hpp  Codegen.hpp  Commands.hpp  Log.hpp  ParseArgs.hpp  SDK.hpp  Warnings.hpp
odb-cli/src/: AST.cpp  Actions.argdef  Actions.cpp  Banner.cpp  BuildInfo.cpp  Codegen.cpp  Commands.cpp  Log.cpp  SDK.cpp  Warnings.cpp  args.cli  main.cpp
odb-cligen/: CMakeLists.txt
odb-cligen/src/: cligen.c  main.c
odb-compiler/: CMakeLists.txt  engine-init-notes.txt  llvm_todo.md  notes.txt  out.cpp
odb-compiler/cmake/: UpdateBuildInfoHeader.cmake
odb-compiler/include/odb-compiler/: BuildInfo.hpp  build_info.h
odb-compiler/include/odbc/: ASTNode.hpp  Driver.hpp
odb-compiler/include/win32_unistd/: unistd.h
odb-compiler/keywords/: DarkTPC.ini  ImageKitV2.ini  Matrix1Util_11.ini  Matrix1Util_14.ini  Matrix1Util_17.ini  Matrix1Util_20.ini  Matrix1Util_23.ini  Matrix1Util_27.ini  Multisync.ini  Physics.ini  ShaderData.ini  keywords105.ini  keywords107.ini  keywordsAT.ini  keywordsODE.ini  odb-keywords.ini
odb-compiler/src/: ASTNode.cpp  Driver.cpp  Parser.y  Scanner.lex  main.cpp
odb-compiler/src/ast/: AnnotatedSymbol.cpp  Annotation.cpp  ArgList.cpp  ArrayDecl.cpp  ArrayRef.cpp  ArrayUndim.cpp  Assignment.cpp  BinaryOp.cpp  Block.cpp  Break.cpp  Command.cpp  CommandExpr.cpp  CommandStmnt.cpp  Conditional.cpp  ConstDecl.cpp  Decrement.cpp  ErrorHighlighter.cpp  Exit.cpp  Exporters_DOT.cpp  Exporters_JSON.cpp  Expression.cpp  ExpressionList.cpp  FuncArgList.cpp  FuncCall.cpp  FuncDecl.cpp  Goto.cpp  Identifier.cpp  ImplicitCast.cpp  Increment.cpp  InitializerList.cpp  Keyword.cpp  LValue.cpp  Label.cpp  Literal.cpp  Loop.cpp  (+38 more)
odb-compiler/src/ast.old/: ArgList.cpp  ArrayDecl.cpp  ArrayRef.cpp  CommandExpr.cpp  CommandStmnt.cpp  ConstDecl.cpp  Data.cpp  Exit.cpp  Exporters_DOT.cpp  Exporters_JSON.cpp  FuncCall.cpp  FuncDecl.cpp  InitializerList.cpp  Label.cpp  Literal.cpp  Node.cpp  Program.cpp  Scope.cpp  SourceLocation.cpp  Subroutine.cpp  VarRef.cpp  VariableScope.cpp  Visitor.cpp
odb-compiler/templates/: BuildInfo.cpp.in  build_info.c.in  config.h.in  config.hpp.in
odb-editor/: CMakeLists.txt
odb-editor/res/: odbeditor.gresource.xml
odb-editor/src/: file_browser.c  main.c
odb-interpreter/: CMakeLists.txt
odb-interpreter/src/: main.cpp
odb-interpreter/templates/: config.hpp.in
odb-plugins/: CMakeLists.txt
odb-plugins/core-commands/: CMakeLists.txt
odb-plugins/keyword-ini-files/: CaptureDesktop.ini  DarkImposters.ini  Dark_Occlusion.ini  IAAKeywords.ini  Matrix1Util_02.ini  Matrix1Util_03.ini  Matrix1Util_10.ini  Matrix1Util_15.ini  Matrix1Util_18.ini  Matrix1Util_19.ini  Matrix1Util_20.ini  Matrix1Util_26.ini  Matrix1Util_30.ini  Matrix1Util_31.ini  Matrix1Util_33.ini  SC_Collision.ini  ShaderData.ini  keywords105.ini
odb-plugins/test-plugin/: CMakeLists.txt
odb-resgen/: CMakeLists.txt
odb-resgen/src/: main.c
odb-sdk/: CMakeLists.txt
odb-sdk/build-Debug/: CMakeCache.txt
odb-sdk/keyword-ini-files/: A2DKeywords.ini  FTP.ini  Matrix1Util_05.ini  Matrix1Util_07.ini  Matrix1Util_10.ini  Matrix1Util_12.ini  Matrix1Util_18.ini  Matrix1Util_24.ini  Matrix1Util_25.ini  SC_Collision.ini  keywordsDP.ini  multijoy_keywords.ini  multithreading.ini
odb-sdk/keywords/: BBB GUI.ini  D3Dfunc.ini  Keywords100.ini  Matrix1Util_01.ini  Matrix1Util_02.ini  Matrix1Util_04.ini  Matrix1Util_06.ini  Matrix1Util_09.ini  Matrix1Util_10.ini  Matrix1Util_13.ini  Matrix1Util_21.ini  Matrix1Util_28.ini  Matrix1Util_29.ini  ShaderData.ini  ShaunRWs  Commands.ini  lua.ini
odb-sdk/plugins/: CMakeLists.txt
odb-sdk/runtime/: CMakeLists.txt
odb-sdk/runtime-dbp/: CMakeLists.txt
odb-sdk/src/: DynamicLibrary.cpp  DynamicLibraryParser.cpp  DynamicLibrary_win32.cpp  FileSystem.cpp  Log.cpp  Plugin.cpp  RefCounted.cpp  Str.cpp  TGCPlugin.cpp  backtrace_linux.c  backtrace_win32.c  btree.c  dynlib_linux.c  dynlib_win32.c  fs_common.c  fs_linux.c  fs_win32.c  hash.c  hm.c  init.c  jenkins_lookup3.c  log.c  mem.c  mfile_linux.c  mfile_win32.c  mstream.c  ospath_linux.c  ospath_win32.c  process_linux.c  process_win32.c  rb.c  str.c  thread_linux.c  thread_win32.c  utf8.c  utf8_linux.c  utf8_list.c  utf8_win32.c  vec.c
odb-sdk/templates/: config.h.in  config.hpp.in
odb-sdk/test-plugin/: CMakeLists.txt
odb-sdk/tests/: env_odbsdk_init.cpp  test_DynamicLibrary.cpp  test_odbsdk_btree.cpp  test_odbsdk_btree_as_set.cpp  test_odbsdk_db.cpp  test_odbsdk_frame_data.cpp  test_odbsdk_fs.cpp  test_odbsdk_hm.cpp  test_odbsdk_hm_old.cpp  test_odbsdk_log.cpp  test_odbsdk_mem.cpp  test_odbsdk_ospath.cpp  test_odbsdk_rb.cpp  test_odbsdk_utf8.cpp  test_odbsdk_utf8_list.cpp  test_odbsdk_vec.cpp
odb-tests/: CMakeLists.txt
odb-tests/src/: env_odbsdk_init.cpp  env_odbutil_init.cpp  main.cpp
odb-util/: CMakeLists.txt
odb-util/src/: FileSystem.cpp  Log.cpp  Str.cpp  backtrace_linux.c  backtrace_win32.c  btree.c  dynlib_linux.c  dynlib_win32.c  fs_common.c  fs_linux.c  fs_win32.c  hash.c  init.c  log.c  mem.c  mfile_linux.c  mfile_win32.c  mstream.c  mutex_linux.c  mutex_win32.c  ospath_linux.c  ospath_win32.c  process_common.c  process_linux.c  process_win32.c  rb.c  thread_linux.c  thread_win32.c  utf8.c  utf8_linux.c  utf8_list.c  utf8_win32.c
odb-util/templates/: config.h.in  config.hpp.in
(+1052 files in other folders)
